--- a/Move.toml
+++ b/Move.toml
@@ -1,9 +1,9 @@
 [package]
-name = "koinobori"
+name = "NoboriFT"
 version = "0.0.1"
 
 [dependencies]
-Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "framework/testnet" }
+Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "framework/mainnet" }
 
 [addresses]
 koinobori = "0x0"
