--- a/scripts/Cargo.toml
+++ b/scripts/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 base85 = "2.0.0"
 hex = "0.4.3"
+regex = "1.10.4"
 serde_json = "1.0.117"
 sha2 = "0.10.8"
 walkdir = "2.5.0"
